Fix unintended use of Java 21 API