@@ -151,7 +151,7 @@ public class ApiAccessor {
         
         if (!queries.isEmpty()) {
             try {
-                Integer page = Integer.parseInt(queries.getLast()) - 1 + config.pagination().getFirst();
+                Integer page = Integer.parseInt(queries.get(queries.size() - 1)) - 1 + config.pagination().getFirst();
                 queries = Stream.concat(queries.stream().limit(queries.size() - 1), Stream.of(page.toString())).collect(Collectors.toList());
             } catch (NumberFormatException e) {
                 logger.info("Pagination parameter missing for URL {} with query: {}", queries);
